--- a/css/index.css
+++ b/css/index.css
@@ -7,20 +7,20 @@
 .mmm-post--index{
 }
 
-.mmm-post--index .mmm-post-terms{
+.mmm-post--index__terms{
 }
 
-.mmm-post--index .mmm-post-title{
+.mmm-post--index__title{
 }
 
-.mmm-post--index .mmm-post-date{
+.mmm-post--index__date{
 }
 
-.mmm-post--index .mmm-post-image{
+.mmm-post--index__image{
 }
 
-.mmm-post--index .mmm-post-image img{
+.mmm-post--index__image img{
 }
 
-.mmm-post--index .mmm-post-content{
+.mmm-post--index__content{
 }
