--- a/css/contact.css
+++ b/css/contact.css
@@ -4,3 +4,98 @@
 - 実装例：page-contact.php
 
 */
+
+.mmm-form{
+    font-size:1.2rem;
+}
+
+.mmm-form fieldset{
+    margin-bottom:1.5em;
+}
+
+.mmm-form legend{
+    margin-bottom:.5em;
+}
+
+.mmm-form__title{
+    font-weight:bold;
+}
+
+.mmm-form__require{
+    display:inline-block;
+    font-size:.5em;
+    color:#FFF;
+    text-align:center;
+    vertical-align:top;
+    background-color:#cc0000;
+    padding:.5em;
+    margin-left:1em;
+}
+
+.mmm-form input[type=text],
+.mmm-form input[type=email],
+.mmm-form input[type=tel],
+.mmm-form textarea,
+.mmm-form select{
+    border:1px solid lightgray;
+    width:100%;
+    height:2em;
+    padding:.25em;
+}
+
+.mmm-form textarea{
+    height:10em;
+}
+
+.mmm-form__radios{
+    display:flex;
+    flex-wrap:wrap;
+}
+
+.mmm-form__radios label{
+    display:flex;
+    align-items:center;
+    margin-right:.5em;
+}
+
+.mmm-form__radios label::before{
+    content: "";
+    display:inline-block;
+    width:1em;
+    height:1em;
+    border:1px solid lightgray;
+    border-radius:50%;
+    background-color:#FFF;
+    margin-right:.2em;
+}
+
+.mmm-form__radios input:checked + label::before{
+    background-color:#0099FF;
+}
+
+.mmm-form__btns{
+    display:flex;
+    flex-wrap:wrap;
+}
+
+.mmm-form__btns input[type='submit'],
+.mmm-form__btns input[type='button'],
+.mmm-form__btns button{
+    height:2em;
+    border:1px solid lightgray;
+    padding:.25em 1em;
+    margin-right:.5em;
+}
+
+@media screen and (max-width:768px){
+
+    .mmm-form__btns input[type='submit'],
+    .mmm-form__btns input[type='button'],
+    .mmm-form__btns button{
+        display:block;
+        width:100%;
+        margin-right:0;
+        margin-bottom:.5em;
+    }
+
+}
