--- a/style.css
+++ b/style.css
@@ -45,8 +45,8 @@ section,header,footer,main,aside,article{
 }
 
 img{
+  width:100%;
   height:auto;
-  max-width:100%;
 }
 
 a,a:visited,a:hover,a:active{
@@ -77,9 +77,6 @@ textarea {
   background:transparent;
   border-radius: 0;
   font:inherit;
-}
-
-textarea{
 }
 
 input[type='checkbox'],
