--- a/css/form.css
+++ b/css/form.css
@@ -1,12 +1,16 @@
 /*
 
-コンタクトフォーム
-- 実装例：page-contact.php
+フォーム
+- templates/form.php
 
 */
 
 .mmm-form{
     font-size:1.2rem;
+}
+
+.mmm-form *{
+    line-height:1.5;
 }
 
 .mmm-form fieldset{
@@ -26,7 +30,7 @@
     font-size:.5em;
     color:#FFF;
     text-align:center;
-    vertical-align:top;
+    vertical-align:text-top;
     background-color:#cc0000;
     padding:.5em;
     margin-left:1em;
@@ -37,6 +41,7 @@
 .mmm-form input[type=tel],
 .mmm-form textarea,
 .mmm-form select{
+    position:relative;
     border:1px solid lightgray;
     width:100%;
     height:2em;
@@ -47,30 +52,53 @@
     height:10em;
 }
 
-.mmm-form__radios{
+.mmm-form__checks{
     display:flex;
     flex-wrap:wrap;
 }
 
-.mmm-form__radios label{
+.mmm-form__checks label{
     display:flex;
     align-items:center;
     margin-right:.5em;
 }
 
-.mmm-form__radios label::before{
+.mmm-form__checks label::before{
     content: "";
     display:inline-block;
     width:1em;
     height:1em;
     border:1px solid lightgray;
-    border-radius:50%;
     background-color:#FFF;
     margin-right:.2em;
 }
 
-.mmm-form__radios input:checked + label::before{
+.mmm-form__checks--radio label::before{
+    border-radius:50%;
+}
+
+.mmm-form__checks--checkbox label::before{
+    border-radius:0;
+}
+
+.mmm-form__checks input:checked + label::before{
     background-color:#0099FF;
+}
+
+.mmm-form__selects{
+    position:relative;
+}
+
+.mmm-form__selects::before{
+    content:"";
+    position:absolute;
+    top:calc(50% - 5px);
+    right:.5em;
+    z-index:0;
+    display:block;
+    border-top:10px solid lightgray;
+    border-left:8px solid transparent;
+    border-right:8px solid transparent;
 }
 
 .mmm-form__btns{
@@ -78,20 +106,24 @@
     flex-wrap:wrap;
 }
 
-.mmm-form__btns input[type='submit'],
-.mmm-form__btns input[type='button'],
-.mmm-form__btns button{
+.mmm-form__btn{
     height:2em;
     border:1px solid lightgray;
     padding:.25em 1em;
     margin-right:.5em;
 }
 
+.mmm-form__btn:hover{
+    opacity:.7;
+}
+
 @media screen and (max-width:768px){
 
-    .mmm-form__btns input[type='submit'],
-    .mmm-form__btns input[type='button'],
-    .mmm-form__btns button{
+    .mmm-form__checks{
+        display:block;
+    }
+
+    .mmm-form__btn{
         display:block;
         width:100%;
         margin-right:0;
