--- a/css/single.css
+++ b/css/single.css
@@ -127,7 +127,7 @@
 .mmm-post--single__content table td{
     padding:1rem;
     line-height:1.2;
-    border:1px solid lightgray;
+    border:1px solid gray;
 }
 
 .mmm-post--single__content table th{
